Ajout d'informations sur les filtres dans le fichier README. Création d'un fichier INSTALL pour expliquer comment installer et faire fonctionner le logiciel